--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* -- GENERAL -- */
 
-:root {
+* {
   box-sizing: border-box;
 }
 
@@ -33,7 +33,8 @@ main {
 
 /* -- Jobs --  */
 .jobs {
-  border: 1px dashed black; /* debug */
+  width: 100%;
+  /* border: 1px dashed black;  */
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -42,8 +43,8 @@ main {
 }
 
 .job {
-  width: calc((100% - 20px) / 3); /* 3 */
-  aspect-ratio: 1;
+  width: calc((100% - 20px) / 3); /* 3 / row desktop */
+  aspect-ratio: 1/1;
   border: 5px solid black;
   padding: 10px;
   display: flex;
@@ -78,4 +79,21 @@ footer {
 
 footer span {
   font-weight: bold;
+}
+
+/* -- MEDIA QUERIES -- */
+
+@media (max-width: 800px) {
+  .job {
+    width: calc((100% - 10px) / 2); /* 2 */
+  }
+}
+
+@media (max-width: 600px) {
+  .jobs {
+    flex-direction: column;
+  }
+  .job {
+    width: 100%;
+  }
 }
